Update: Updating tests configuration

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@webcomponents/webcomponentsjs": "^2.0.0",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
-    "wct-mocha": "^1.0.0"
+    "wct-mocha": "^1.0.0",
+    "sinon": "^7.2.3"
   },
   "main": "headers-parser-mixin.js",
   "authors": [
