--- a/package.json
+++ b/package.json
@@ -53,9 +53,9 @@
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "format": "npm run format:eslint && npm run format:prettier",
     "test:watch": "karma start --auto-watch=true --single-run=false",
-    "test:legacy": "karma start --legacy --coverage",
-    "test:legacy:watch": "karma start --legacy --auto-watch=true --single-run=false",
-    "test:sl": "karma start karma.sl.config.js --legacy --coverage"
+    "test:legacy": "karma start --compatibility=auto --coverage",
+    "test:legacy:watch": "karma start --compatibility=auto --auto-watch=true --single-run=false",
+    "test:sl": "karma start karma.sl.config.js --compatibility=auto --coverage"
   },
   "lint-staged": {
     "*.js": [
