--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
   "bugs": {
     "url": "https://github.com/advanced-rest-client/headers-parser-mixin/issues"
   },
-  "dependencies": {
-    "@polymer/polymer": "^3.3.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@advanced-rest-client/eslint-config": "^1.1.5",
     "@advanced-rest-client/testing-karma-sl": "^1.2.0",
@@ -40,6 +38,7 @@
     "es-dev-server": "^1.46.2",
     "husky": "^4.2.5",
     "lint-staged": "^10.1.3",
+    "lit-element": "^2.3.1",
     "lit-html": "^1.2.1",
     "webpack-merge": "^4.2.2"
   },
