refactor: moving mixin to a module implementation

--- a/package.json
+++ b/package.json
@@ -26,38 +26,58 @@
   "bugs": {
     "url": "https://github.com/advanced-rest-client/headers-parser-mixin/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@open-wc/dedupe-mixin": "^1.2.17"
+  },
   "devDependencies": {
-    "@advanced-rest-client/eslint-config": "^1.1.5",
-    "@advanced-rest-client/testing-karma-sl": "^1.2.0",
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
-    "@open-wc/prettier-config": "^0.1.14",
-    "@open-wc/testing": "^2.5.11",
-    "@open-wc/testing-karma": "^3.3.12",
-    "@polymer/gen-typescript-declarations": "^1.6.2",
-    "es-dev-server": "^1.46.2",
+    "@advanced-rest-client/testing-karma-sl": "^1.3.1",
+    "@open-wc/eslint-config": "^2.0.6",
+    "@open-wc/testing": "^2.5.16",
+    "@open-wc/testing-karma": "^3.3.19",
+    "deepmerge": "^4.2.2",
+    "es-dev-server": "^1.48.1",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.11.0",
     "husky": "^4.2.5",
-    "lint-staged": "^10.1.3",
+    "lint-staged": "^10.2.2",
     "lit-element": "^2.3.1",
     "lit-html": "^1.2.1",
-    "webpack-merge": "^4.2.2"
+    "prettier": "^2.0.5",
+    "typescript": "^3.8.3",
+    "typescript-lit-html-plugin": "^0.9.0"
   },
   "scripts": {
-    "test": "karma start --coverage",
-    "update-types": "gen-typescript-declarations --deleteExisting --outDir .",
-    "lint:eslint": "eslint --ext .js,.html .",
-    "format:eslint": "eslint --ext .js,.html . --fix",
-    "lint:prettier": "prettier \"**/*.js\" --list-different || (echo '↑↑ these files are not prettier formatted ↑↑' && exit 1)",
-    "format:prettier": "prettier \"**/*.js\" --write",
+    "lint:eslint": "eslint --ext .js,.html . --ignore-path .gitignore",
+    "format:eslint": "eslint --ext .js,.html . --fix --ignore-path .gitignore",
+    "lint:prettier": "prettier \"**/*.js\" --check --ignore-path .gitignore",
+    "format:prettier": "prettier \"**/*.js\" --write --ignore-path .gitignore",
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "format": "npm run format:eslint && npm run format:prettier",
+    "test": "karma start --coverage",
     "test:watch": "karma start --auto-watch=true --single-run=false",
-    "test:sl": "karma start karma.sl.config.js --coverage"
+    "test:sl": "karma start karma.sl.config.js --compatibility auto --coverage",
+    "lint:types": "tsc"
+  },
+  "eslintConfig": {
+    "extends": [
+      "@open-wc/eslint-config",
+      "eslint-config-prettier"
+    ]
+  },
+  "prettier": {
+    "singleQuote": true,
+    "arrowParens": "avoid"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "*.js": [
-      "eslint --fix"
+      "eslint --fix",
+      "prettier --write",
+      "git add"
     ]
   }
 }
